install AWS CLI packages

--- a/ansible-container/Dockerfile
+++ b/ansible-container/Dockerfile
@@ -5,3 +5,11 @@ RUN apt update && \
   apt-add-repository --yes --update ppa:ansible/ansible && \
   apt install -y ansible
 
+RUN apt update && \
+  apt install -y \
+  curl \
+  zip
+
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+  unzip awscliv2.zip && \
+  ./aws/install
