--- a/ansible-container/Dockerfile
+++ b/ansible-container/Dockerfile
@@ -14,3 +14,5 @@ RUN apt update && \
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
   unzip awscliv2.zip && \
   ./aws/install
+
+RUN echo "alias ap='ansible-playbook'" >> ~/.bash_aliases && . ~/.bashrc
