Added volumes, AWS creds, Terraform-container

--- a/ansible-container/Dockerfile
+++ b/ansible-container/Dockerfile
@@ -1,18 +1,28 @@
 FROM ubuntu:20.04
 
 RUN apt update && \
+  #Install Ansible and other CLI tools:
   apt install software-properties-common -y && \
   apt-add-repository --yes --update ppa:ansible/ansible && \
   apt install -y \
   ansible \
   curl \
+  wget \
   zip \
   tree \
   nano \
   vim
 
+#Install AWS CLI packages:
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
   unzip awscliv2.zip && \
   ./aws/install
 
+#Add aliases:
 RUN echo "alias ap='ansible-playbook'" >> ~/.bash_aliases && . ~/.bashrc
+
+COPY .aws/ /root/.aws/
+
+#Attach volumes:
+VOLUME ansible-workdir/
+#VOLUME ./ssh-keys 
