--- a/ansible-container/Dockerfile
+++ b/ansible-container/Dockerfile
@@ -21,10 +21,10 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
 #Add aliases:
 RUN echo "alias ap='ansible-playbook'" >> ~/.bash_aliases && . ~/.bashrc
 
-COPY .aws/ /root/.aws/
-COPY .SSH-keys/ /root/.ssh/
-COPY / /root/.aws/
+#Copy AWS CLI credentials:
+RUN make /.aws
+COPY .aws/ .aws
 
 #Attach volumes:
 VOLUME ansible-workdir/
-#VOLUME ./ssh-keys 
+VOLUME SSH-keys/
