--- a/terraform-container/Dockerfile
+++ b/terraform-container/Dockerfile
@@ -1,18 +1,31 @@
 FROM ubuntu:20.04
 
+ARG TERRAFORM_VERSION=0.14.7
+
 RUN apt update && \
   #Install CLI tools:
   apt install -y \
   curl \
+  wget \
   zip \
   tree \
   nano \
-  vim 
+  vim \
+  less 
 
 #Install Terraform
-RUN curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add - && \
-  apt-add-repository "deb [arch=$(dpkg --print-architecture)] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-  apt install -y terraform
+RUN wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+RUN \
+	# Unzip
+	unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
+  rm terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
+	# Move to local bin
+	mv terraform /usr/local/bin/ && \
+	# Make it executable
+	chmod +x /usr/local/bin/terraform && \
+	# Check that it's installed
+	terraform --version
+
 
 #Install AWS CLI packages:
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
@@ -24,7 +37,12 @@ RUN echo "alias ti='terraform init'" >> ~/.bash_aliases && . ~/.bashrc && \
   echo "alias tp='terraform plan'" >> ~/.bash_aliases && . ~/.bashrc && \
   echo "alias ta='terraform apply'" >> ~/.bash_aliases && . ~/.bashrc
 
+VOLUME terraform-workdir/ 
+VOLUME SSH-keys/ /SSH/
+
+#Copy AWS CLI credentials:
 COPY .aws/ /root/.aws/
 
 #Attach volumes:
-VOLUME terraform-workdir/
+RUN mkdir -p /SSH
+WORKDIR /SSH
