--- a/ansible-container/Dockerfile
+++ b/ansible-container/Dockerfile
@@ -23,8 +23,6 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
 RUN echo "alias ap='ansible-playbook'" >> ~/.bash_aliases && . ~/.bashrc
 
 #Copy AWS CLI credentials:
-COPY .aws/ .aws/
+COPY .aws/ /root/.aws/
 
-#Attach volumes:
-VOLUME ansible-workdir/
-VOLUME SSH-keys/
+WORKDIR /ansible-workdir
